--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-redux-form": "^1.16.14",
